--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuetify": "^3.8.0-beta.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "sass": "^1.87.0",
+    "sass-loader": "^16.0.5",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
